# Hello

./: .clang-format  .gitexternals  .gitsubprojects  .travis.yml  AUTHORS.txt  CMakeLists.txt  README.md
apps/rule/: CMakeLists.txt  main.cpp
doc/: Changelog.md  Documentation.md
tests/: CMakeLists.txt  world.cpp
